--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,10 +4,17 @@
 <p><%= startingContent %></p>
 
 <% blogPosts.forEach((post) => { %>
-  <h1><%= post.title %></h1>
-  <p><%= post.content.substring(0,100)+" ..." %>
-    <a href="/posts/<%= post.title %>">Read More</a>
-  </p>
+  <% if(post.content.length > 100) { %>
+    <h1><%= post.title %></h1>
+    <p><%= post.content.substring(0,100)+" ..." %>
+      <a href="/posts/<%= post.title %>">Read More</a>
+    </p>
+ 
+  <%} else{ %>
+    <h1><%= post.title %></h1>
+    <p><%= post.content %>
+  <% } %>
+   
 <% }); %>
 
 
