--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,13 @@
+a,
+a:focus {
+    text-decoration: none;
+}
+
 .container-fluid {
     padding-top: 70px;
     padding-bottom: 70px;
 }
+
 .navbar {
     padding-top: 15px;
     padding-bottom: 15px;
@@ -11,25 +17,41 @@
     font-size: 12px;
     letter-spacing: 5px;
 }
-.navbar-nav  li a:hover {
+
+.navbar-nav li a:hover {
     color: #1abc9c !important;
 }
 
 .footer-padding {
-	padding-bottom: 60px;
+    padding-bottom: 60px;
 }
 
 .footer {
-	position: absolute;
-	text-align: center;
-	bottom: 0;
-	width: 100%;
-	height: 60px;
-	background-color: #1abc9c;
+    position: absolute;
+    text-align: center;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #1abc9c;
 }
 
 .footer p {
-	margin-top: 25px;
-	font-size: 12px;
-  color: #fff;
+    margin-top: 25px;
+    font-size: 12px;
+    color: #fff;
+}
+
+.composeBtn {
+    font-size: 2rem;
+    padding: 1rem 2rem;
+    background-color: #1abc9c;
+    margin-top: 2rem;
+
+    border-radius: 3rem;
+    outline: none;
+    border: none;
+}
+
+.composeBtn a {
+    color: #fff;
 }
